[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/soundbar_style.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/button_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/button_arrow_hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/button_arrow_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/menu_background_nologo.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/TeacherMenuAnimation/6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Pixel_7x10.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Animations/TeacherMenuAnimation/5.png" type="Texture" id=9]
[ext_resource path="res://Scripts/TranslatedLabel.gd" type="Script" id=10]
[ext_resource path="res://Assets/Animations/TeacherMenuAnimation/2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Animations/TeacherMenuAnimation/1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Animations/TeacherMenuAnimation/3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Animations/TeacherMenuAnimation/4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Animations/MenuTransition/1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Animations/MenuTransition/8.png" type="Texture" id=16]
[ext_resource path="res://Assets/Animations/MenuTransition/6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Animations/MenuTransition/7.png" type="Texture" id=18]
[ext_resource path="res://Assets/Animations/MenuTransition/10.png" type="Texture" id=19]
[ext_resource path="res://Assets/Animations/MenuTransition/9.png" type="Texture" id=20]
[ext_resource path="res://Assets/Animations/MenuTransition/11.png" type="Texture" id=21]
[ext_resource path="res://Assets/Animations/MenuTransition/4.png" type="Texture" id=22]
[ext_resource path="res://Assets/Animations/MenuTransition/3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Animations/MenuTransition/5.png" type="Texture" id=24]
[ext_resource path="res://Assets/Animations/MenuTransition/2.png" type="Texture" id=25]
[ext_resource path="res://Scripts/FadeInShader.gdshader" type="Shader" id=26]

[sub_resource type="DynamicFont" id=1]
size = 28
extra_spacing_top = -3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ null, ExtResource( 15 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 26 )
shader_param/amount = 1.0
shader_param/mirror_effect = true

[sub_resource type="Animation" id=6]
resource_name = "FadeIn"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn:material:shader_param/mirror_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeOut"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1.56917, 0.535887 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn:material:shader_param/mirror_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn:material:shader_param/mirror_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MenuBackground" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Interface" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="MasterVolume" type="HSlider" parent="Interface"]
margin_left = 1220.0
margin_top = 407.0
margin_right = 1450.0
margin_bottom = 474.0
rect_pivot_offset = Vector2( -1158, -118 )
focus_mode = 0
theme = ExtResource( 2 )
min_value = -60.0
max_value = 0.0
value = -30.0

[node name="Label" type="Label" parent="Interface/MasterVolume"]
margin_left = -210.0
margin_top = 8.0
margin_right = -48.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "MESTRE"
align = 2
script = ExtResource( 10 )
translation_key = "MASTER_LABEL"

[node name="Value" type="Label" parent="Interface/MasterVolume"]
margin_left = 277.0
margin_top = 14.0
margin_right = 330.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "50"

[node name="SfxVolume" type="HSlider" parent="Interface"]
margin_left = 1220.0
margin_top = 500.0
margin_right = 1450.0
margin_bottom = 567.0
focus_mode = 0
theme = ExtResource( 2 )
min_value = -60.0
max_value = 0.0

[node name="Label" type="Label" parent="Interface/SfxVolume"]
margin_left = -427.0
margin_top = 8.0
margin_right = -47.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "EFEITOS SONOROS"
align = 2
script = ExtResource( 10 )
translation_key = "SOUNDFX_LABEL"

[node name="Value" type="Label" parent="Interface/SfxVolume"]
margin_left = 277.0
margin_top = 14.0
margin_right = 347.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="MusicVolume" type="HSlider" parent="Interface"]
margin_left = 1220.0
margin_top = 593.0
margin_right = 1450.0
margin_bottom = 660.0
focus_mode = 0
theme = ExtResource( 2 )
min_value = -60.0
max_value = 0.0

[node name="Label" type="Label" parent="Interface/MusicVolume"]
margin_left = -207.0
margin_top = 8.0
margin_right = -45.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "MÃšSICA"
align = 2
script = ExtResource( 10 )
translation_key = "MUSIC_LABEL"

[node name="Value" type="Label" parent="Interface/MusicVolume"]
margin_left = 277.0
margin_top = 14.0
margin_right = 347.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="SaveButton" type="TextureButton" parent="Interface"]
margin_left = 640.0
margin_top = 185.0
margin_right = 745.0
margin_bottom = 270.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Title" type="Label" parent="Interface"]
margin_left = 1049.0
margin_top = 199.0
margin_right = 1325.0
margin_bottom = 253.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "VOLUME"
align = 1
script = ExtResource( 10 )
translation_key = "SETTINGS_TITLE"

[node name="Transition" type="AnimatedSprite" parent="."]
position = Vector2( 1182, 501 )
frames = SubResource( 4 )

[node name="FadeIn" type="ColorRect" parent="Transition"]
show_behind_parent = true
material = SubResource( 5 )
margin_left = 583.0
margin_top = -371.0
margin_right = 1753.0
margin_bottom = 374.0
rect_scale = Vector2( -1, 1 )
mouse_filter = 2
color = Color( 1, 0.92549, 0.839216, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
reset_on_save = false
anims/FadeIn = SubResource( 6 )
anims/FadeOut = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="TeacherSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 5
playing = true
centered = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="value_changed" from="Interface/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="Interface/SfxVolume" to="." method="_on_SfxVolume_value_changed"]
[connection signal="value_changed" from="Interface/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="Interface/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="animation_finished" from="TeacherSprite" to="TeacherSprite" method="_on_AnimatedSprite_animation_finished"]
